[project]
name = "pdgapi_diff"
version = "0.0.1"
authors = [
  { name="Matt Kramer", email="mkramer@lbl.gov" },
]
description = "PDG API diff tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "SQLAlchemy>=1.4",
  "colorama>=0.4",
  "fire>=0.5",
  "tqdm>=4.65",
]

[project.scripts]
pdgapi-diff = 'pdgapi_diff.cli.pdgapi_diff:main'
