[project]
name = "pdgapi-diff"
version = "0.0.1"
authors = [
  { name="Matt Kramer", email="mkramer@lbl.gov" },
]
description = "PDG API diff tool"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "SQLAlchemy>=1.4",
  "colorama>=0.4",
  "fire>=0.5",
  "tqdm>=4.65",
]

[project.scripts]
pdgapi-diff = 'pdgapi_diff.cli.pdgapi_diff:main'
